--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@ main {
     border: 1px solid black;
     background-color: white;
 
+}
+
+.pricing {
     padding: 2.85rem 2.5rem;
     box-sizing: border-box;
 
@@ -234,4 +237,20 @@ main {
     font-weight: 700;
 
     margin-left: 0.25rem;
+}
+
+
+
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    border-top: 1px solid black;
+}
+
+
+.info > ul > li {
+    color: hsl(223, 50%, 87%);
 }
